tweak mid-screen height to avoid overlap

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -16,7 +16,7 @@
 @media only screen and (min-width: 640px) {
   .hero-bg {
     z-index: -1;
-    height: 400px;
+    height: 450px;
   }
 }
 
